Fix sidebar and add scrollbar (#451)
* Attempt to fix sidebar vertically

* Affix sidebar, add scroll (#448)

--- a/css/lavish-bootstrap.css
+++ b/css/lavish-bootstrap.css
@@ -717,7 +717,7 @@ pre code {
 .col-sm-12,
 .col-md-1,
 .col-md-2,
-.col-md-3,
+.col-md-3
 .col-md-4,
 .col-md-5,
 .col-md-6,
